--- a/.github/workflows/file-lister.yaml
+++ b/.github/workflows/file-lister.yaml
@@ -14,17 +14,7 @@ jobs:
     - uses: actions/checkout@master
     - name: Copy the Readmes
       run: |
-        find ./src/ -type f -name "**.tsv" | while read fname; do
-          dirname=`dirname "$fname"`
-          foldername=`basename "$dirname"`
-          filename=`basename "$fname"`
-          newname=`echo "$dirname" | sed -e "s/ /_/g"`
-          cp "${dirname}/$filename" "./dist/${foldername}.txt"
+        for i in `find ./src/ -type f -name "*.img";
+        do
+          echo "$i"
         done
-    - name: Commit files
-      run: |
-        git config --global user.name "MatthewLarson"
-          git config --global user.email "larson.matt.b@gmail.com"
-          git add --all
-          git commit -m "Moved files around"
-          git push
